--- a/src/App.css
+++ b/src/App.css
@@ -8,13 +8,13 @@
 :root {
   --primary-bg-color: #f3fbfc;
   --secondary-bg-color: #2d3353;
-  --accent-color: #79c5d2;
+  --accent-color: hsl(189, 50%, 60%);
   --primary-text-color: hsl(233, 21%, 10%);
   --secondary-text-color: hsl(0, 0%, 100%);
   --main-btn-color: hsl(176, 76%, 20%, 0.7);
   --primary-text-container-color: hsl(200, 75%, 100%);
   --mobile-nav-height: 80px;
-  --lg-nav-height: 8rem;
+  --lg-nav-height: 120px;
   --padding-mobile: 1rem;
   --padding: 5rem;
   --nav-padding-lg: 1rem 3rem;
@@ -72,7 +72,6 @@ q {
 
 img {
   width: 100%;
-  height: 100%;
 }
 
 /* ul {
