--- a/src/pages/WeddingPage/WeddingPage.css
+++ b/src/pages/WeddingPage/WeddingPage.css
@@ -17,4 +17,11 @@
 
 .wedding-list-item {
   font-weight: 300;
+  font-size: 1rem;
+}
+
+@media (min-width: 900px) {
+  .wedding-list-item {
+    font-size: 1.2rem;
+  }
 }
