--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -77,6 +77,7 @@ header {
   font-size: 1.4rem;
   font-weight: 400;
   width: 100%;
+  cursor: pointer;
 }
 
 .dropdown-top {
@@ -185,7 +186,7 @@ header {
     margin: 0;
   }
 
-  #dropdown-icon {
+  #dropdown-btn {
     /* margin: 0; */
     display: none;
   }
